<resources>
    <!-- Existing strings... -->
    
    <!-- 🆕 Trailer related strings -->
    <string name="toggle_sound">Toggle sound</string>
    <string name="trailer_loading">Loading trailer…</string>
    <string name="trailer_error">Error loading trailer</string>
    <string name="no_trailer_available">No trailer available</string>
    <string name="sound_on">Sound on</string>
    <string name="sound_off">Sound off</string>
    <string name="trailer_ready">Trailer ready</string>
    <string name="trailer_ended">Trailer ended</string>
    <string name="trailer_paused">Trailer paused</string>
    <string name="trailer_playing">Trailer playing</string>
    <!-- Cast/Screen Mirroring Strings -->
    <string name="cast_to_device">Cast to Device</string>
    <string name="screen_mirroring">Screen Mirroring</string>
    <string name="stop_casting">Stop Casting</string>
    <string name="no_cast_devices_found">No Cast Devices Found</string>
    <string name="make_sure_devices_same_network">Make sure your cast device is connected to the same network</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="casting_to">Casting to %1$s</string>
    <string name="screen_mirroring_active">Screen Mirroring Active</string>
    <string name="available_for_casting">Available for casting</string>
    <string name="connected">Connected</string>
    <string name="cast_device">Cast device</string>
    <string name="no_devices">No devices</string>
    <string name="select_device">Select device</string>
    <string name="cast_icon">Cast icon</string>
    <string name="menu">Menu</string>
    <string name="navigation">Navigation</string>
    <string name="settings">Settings</string>
    <string name="downloads">Downloads</string>
    
    <!-- Notification Strings -->
    <string name="notification_cast_title">Screen Mirroring Active</string>
    <string name="notification_cast_text">Casting to %1$s</string>
    <string name="notification_cast_stop">Stop Casting</string>
    
    <!-- NEW: Missing strings that existing layout references -->
    <string name="title_home">Home</string>
    <string name="title_media">Media</string>
    <string name="title_favorite">Favorites</string>
</resources>